--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpspreadsheet": "^1.12",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
