--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
         "axios": "^0.21.1",
-        "bootstrap": "^4.0.0",
-        "browser-sync": "^2.26.14",
+        "bootstrap": "^4.6.0",
+        "browser-sync": "^2.27.3",
         "cross-env": "^5.1",
+        "datatables.net-dt": "^1.1.0",
+        "datatables.net-responsive-dt": "^2.2.9",
         "gulp": "^4.0.2",
-        "gulp-sass": "^4.1.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
+        "gulp-sass": "^5.0.0",
+        "jquery": "^3.6.0",
+        "laravel-mix": "^6.0.25",
         "lodash": "^4.17.5",
+        "moment": "^2.29.1",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^4.0.0",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "sass-loader": "^7.3.1",
+        "tempusdominus-bootstrap": "^5.37.0",
+        "toastr": "^2.1.4",
+        "webpack": "^5.41.1"
     }
 }
