--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^7.3.1",
+        "select2": "^4.1.0-rc.0",
         "tempusdominus-bootstrap": "^5.37.0",
         "toastr": "^2.1.4",
         "webpack": "^5.41.1"
