--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
-        "browser-sync": "^2.27.3",
+        "browser-sync": "^2.27.4",
         "cross-env": "^5.1",
         "datatables.net-dt": "^1.1.0",
         "datatables.net-responsive-dt": "^2.2.9",
@@ -25,8 +25,9 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^7.3.1",
+        "select2": "^4.1.0-rc.0",
         "tempusdominus-bootstrap": "^5.37.0",
         "toastr": "^2.1.4",
-        "webpack": "^5.41.1"
+        "webpack": "^5.42.1"
     }
 }
